# goblin-ai

./: .gitignore  LICENSE  MANIFEST.in  README.md  build_nuitka.py  build_protected.py  pyproject.toml  setup.py
.github/scripts/: build_linux.sh  encrypt_source.py  test_generate.py
.github/workflows/: build-publish.yml  build-wheels.yml  test.yml
goblin/: .gkey  __init__.py  __main__.py  _core.cp311-win_amd64.pyd  _core.cp312-win_amd64.pyd  _core.cp313-win_amd64.pyd  _guard.cp311-win_amd64.pyd  _guard.cp312-win_amd64.pyd  _guard.cp313-win_amd64.pyd  easy.cp311-win_amd64.pyd  easy.cp312-win_amd64.pyd  easy.cp313-win_amd64.pyd  generator.cp311-win_amd64.pyd  generator.cp312-win_amd64.pyd  generator.cp313-win_amd64.pyd  models.cp311-win_amd64.pyd  models.cp312-win_amd64.pyd  models.cp313-win_amd64.pyd  parameters.cp311-win_amd64.pyd  parameters.cp312-win_amd64.pyd  parameters.cp313-win_amd64.pyd  pool.cp311-win_amd64.pyd  pool.cp312-win_amd64.pyd  pool.cp313-win_amd64.pyd  prompts.cp311-win_amd64.pyd  prompts.cp312-win_amd64.pyd  prompts.cp313-win_amd64.pyd  prompts.py  server.cp311-win_amd64.pyd  server.cp312-win_amd64.pyd  server.cp313-win_amd64.pyd  upscaler.cp311-win_amd64.pyd  upscaler.cp312-win_amd64.pyd  upscaler.cp313-win_amd64.pyd
goblin/web/: index.html
goblin/web/css/: main.css
goblin/web/js/: app.js
scripts/: encrypt_source.py  test_generate.py
