[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goblin-ai"
version = "1.0.1"
description = "Unlimited free AI image generation. No sign-up required."
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "Goblin Team"}
]
keywords = ["ai", "image-generation", "stable-diffusion", "flux", "anime", "api", "free"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "camoufox[geoip]>=0.4.0",
    "curl_cffi>=0.9.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
quality = [
    "opencv-contrib-python>=4.8.0",  # For FSRCNN neural upscaling
]
best = [
    "realesrgan>=0.3.0",              # For Real-ESRGAN upscaling
    "basicsr>=1.4.0",
]
all = [
    "opencv-contrib-python>=4.8.0",
    "realesrgan>=0.3.0",
    "basicsr>=1.4.0",
]

[project.scripts]
goblin = "goblin.__main__:main"

[project.urls]
Homepage = "https://github.com/mdakk072/goblin-ai"

[tool.setuptools]
packages = ["goblin"]
include-package-data = false

[tool.setuptools.package-data]
goblin = ["*.pyd", "*.so", "__init__.py", "__main__.py"]

[tool.setuptools.exclude-package-data]
"*" = ["_core.py", "_guard.py", "easy.py", "generator.py", "models.py", "parameters.py", "server.py", "prompts.py", "*.pyi", "*.c", "*.h", "*.pyx"]
goblin = ["_core.py", "_guard.py", "easy.py", "generator.py", "models.py", "parameters.py", "server.py", "prompts.py", "*.pyi", "*.c", "*.h", "*.pyx"]

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-*"
skip = "*-musllinux* *-win32 *-manylinux_i686"

[tool.cibuildwheel.linux]
before-build = "pip install cython setuptools"

[tool.cibuildwheel.windows]
before-build = "pip install cython setuptools"

[tool.cibuildwheel.macos]
before-build = "pip install cython setuptools"
